async music finder & fix spotify source